stop stretching

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body
   height: 350px;
   width: 350px;
   padding: 25px;
+  max-width: 100%;
 }
 .row
 {
